Added transaction APIs